--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <div class="home__notification-wrapper">
                                 <div class="d-flex align-items-center">
                                     <h4 class="title-medium text-500">Панель уведомлений</h4><span class="home__notification-counter">1</span>
-                                </div><button class="button button-outline" type="button"><span class="text-small">Отметить все как прочитанное</span></button>
+                                </div><button class="button button-outline" type="button"><span class="text-small text-green">Отметить все как прочитанное</span></button>
                             </div>
                             <div class="home__notification-list">
                                 <div class="d-flex justify-content-between home__notification-item is-active"><span class="text-500 text-medium home__notification-item-name">Повышение
